Updated to version6

--- a/src/src/Client/Pages/Content/Home.razor
+++ b/src/src/Client/Pages/Content/Home.razor
@@ -19,13 +19,13 @@
             </MudText>
         </MudItem>
         <MudItem  xs="12" sm="12" md="12">
-            <MudAlert Style="margin-top:10px;justify-content:center" Severity="Severity.Info">@_localizer["Celebrating 1 Star on Github!"] <MudLink Href="https://github.com/Genocs/CleanArchitecture/stargazers">@_localizer["Liked BlazorPortal? Star us on Github!"]</MudLink></MudAlert>
+            <MudAlert Style="margin-top:10px;justify-content:center" Severity="Severity.Info">@_localizer["Celebrating 1 Star on Github!"] <MudLink Href="https://github.com/Genocs/blazor-clean-template">@_localizer["Liked BlazorPortal? Star us on Github!"]</MudLink></MudAlert>
         </MudItem>
         <MudItem xs="12" sm="12" md="12">
             <div class="pa-4 justify-center my-4 mud-text-align-center">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Link="https://genocs-blog.netlify.app/Genocs" Target="_blank">@_localizer["Project Page"]</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Link="https://github.com/Genocs/blazor-clean-template" Target="_blank">@_localizer["Project Page"]</MudButton>
                 <MudButton Variant="Variant.Filled" Color="Color.Secondary" Link="https://www.buymeacoffee.com/genocs" Target="_blank">@_localizer["Support Me"]</MudButton>
-                <MudButton Variant="Variant.Filled" Color="Color.Surface" Link="https://genocs.github.io/docs/" Target="_blank">@_localizer["Documentation - Coming Soon"]</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Surface" Link="https://genocs-blog.netlify.app/blazor-template/" Target="_blank">@_localizer["Documentation - Coming Soon"]</MudButton>
             </div>
         </MudItem>
 
@@ -37,8 +37,8 @@
                 </MudExpansionPanel>
                 <MudExpansionPanel Text="@_localizer["Important Links"]" MaxHeight="500">
                     <MudList Clickable="true">
-                        <MudListItem Text="@_localizer["Github Repository : Do Not Forget to Leave a Star ;)"]" Href="https://github.com/Genocs/CleanArchitecture" />
-                        <MudListItem Text="@_localizer["Quick Start Guide"]" Href="https://genocs-blog.netlify.app/Genocs" />
+                        <MudListItem Text="@_localizer["Github Repository : Do Not Forget to Leave a Star ;)"]" Href="https://github.com/Genocs/blazor-clean-template" />
+                        <MudListItem Text="@_localizer["Quick Start Guide"]" Href="https://genocs-blog.netlify.app/blazor-template/" />
                     </MudList>
                 </MudExpansionPanel>
                 <MudExpansionPanel Text="@_localizer["Learning Resources"]" MaxHeight="1000">
