--- a/src/template/src/Client/wwwroot/index.html
+++ b/src/template/src/Client/wwwroot/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Genocs.BlazorClean.Template</title>
     <base href="/" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,500,600,700,800&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="css/loader.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="512x512" href="splash.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="splash.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <style>
+        .radial-text-gradient {
+            background: radial-gradient(circle, red, yellow);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+    </style>
 </head>
 
 <body>
